# pokemon_helper

./: CMakeLists.txt  README.md  build-debug.sh  build-release.sh
source/: enum_value.hpp  gen.hpp  get_coverage_gaps.hpp  get_defensive_advantages.hpp  get_recommend_info.hpp  get_super_effectives.hpp  get_weaknesses.hpp  main.cpp  pokemon.hpp  print.hpp  read_types.hpp  read_ull.hpp  recommend.hpp  type.hpp  type_chart.hpp  type_count.hpp  type_matchup.hpp  type_sv.hpp  what.hpp
